--- a/panel.html
+++ b/panel.html
@@ -16,16 +16,19 @@
                 <h3>Añadir Nuevo Proyecto</h3>
                 <input type="text" id="titulo" placeholder="Título del proyecto" oninput="updatePreview()">
                 <input type="text" id="id" placeholder="ID para la URL (ej: mi-proyecto-1)" oninput="updatePreview()">
-                
                 <textarea id="resumen" placeholder="Resumen para la tarjeta (texto corto)" oninput="updatePreview()"></textarea>
                 <textarea id="contenido_completo" placeholder="Contenido completo de la página (soporta Markdown)" oninput="updatePreview()"></textarea>
-
                 <div class="markdown-ayuda">
                     <p><b>Ayuda:</b> **negrita**, *cursiva*, [enlace](url), `https://link.youtube.com`, `[IMAGEN-DESCARGA](url_imagen, url_descarga)`</p>
                 </div>
-                <input type="text" id="imagen" placeholder="URL de la imagen principal (para la tarjeta)" oninput="updatePreview()">
+                <input type="text" id="imagen" placeholder="URL de la imagen principal" oninput="updatePreview()">
                 <input type="text" id="enlace" placeholder="URL del botón principal (opcional)" oninput="updatePreview()">
                 <button onclick="addProject()">Añadir Proyecto a la Lista</button>
+            </div>
+            <hr>
+            <div class="manage-container">
+                <h2>Gestionar Proyectos Existentes</h2>
+                <div id="manage-list"></div>
             </div>
             <hr>
             <div class="save-container">
@@ -47,6 +50,7 @@
             .then(response => response.json())
             .then(data => {
                 currentProjects = data.items || [];
+                renderManageList();
                 previewFrame.onload = () => previewFrame.contentWindow.postMessage({ type: 'previewUpdate', payload: currentProjects }, '*');
                 if (document.readyState === "complete") {
                     previewFrame.contentWindow.postMessage({ type: 'previewUpdate', payload: currentProjects }, '*');
@@ -54,7 +58,38 @@
             });
         }
 
-        function updatePreview() {
+        // --- NUEVA FUNCIÓN PARA MOSTRAR LA LISTA DE GESTIÓN ---
+        function renderManageList() {
+            const listContainer = document.getElementById('manage-list');
+            listContainer.innerHTML = '';
+            if (currentProjects.length === 0) {
+                listContainer.innerHTML = '<p>No hay proyectos en la lista.</p>';
+                return;
+            }
+            const reversedProjects = [...currentProjects].reverse();
+            reversedProjects.forEach((proyecto, index) => {
+                const originalIndex = currentProjects.length - 1 - index;
+                const projectElement = document.createElement('div');
+                projectElement.className = 'manage-item';
+                projectElement.innerHTML = `
+                    <span>${proyecto.titulo}</span>
+                    <button class="delete-button" onclick="deleteProject(${originalIndex})">Borrar</button>
+                `;
+                listContainer.appendChild(projectElement);
+            });
+        }
+        
+        // --- NUEVA FUNCIÓN PARA BORRAR ---
+        function deleteProject(index) {
+            if (confirm(`¿Seguro que quieres borrar el proyecto "${currentProjects[index].titulo}"?`)) {
+                currentProjects.splice(index, 1);
+                renderManageList();
+                updatePreview(true); // Actualiza la preview con la lista ya modificada
+                alert('Proyecto borrado de la lista. Pulsa "Generar y Descargar" para guardar los cambios.');
+            }
+        }
+
+        function updatePreview(forceUpdate = false) {
             const tempProject = {
                 titulo: document.getElementById('titulo').value,
                 id: document.getElementById('id').value,
@@ -63,7 +98,8 @@
                 imagen: document.getElementById('imagen').value,
                 enlace: document.getElementById('enlace').value
             };
-            const liveProjects = [...currentProjects, tempProject];
+            // Si no estamos borrando, añadimos el proyecto temporal para la preview en vivo
+            const liveProjects = forceUpdate ? [...currentProjects] : [...currentProjects, tempProject];
             previewFrame.contentWindow.postMessage({ type: 'previewUpdate', payload: liveProjects }, '*');
         }
 
@@ -80,13 +116,14 @@
                 alert('Todos los campos son obligatorios (excepto el enlace del botón).'); return;
             }
             currentProjects.push(proyecto);
+            renderManageList(); // Actualizar la lista de gestión
             document.getElementById('titulo').value = '';
             document.getElementById('id').value = '';
             document.getElementById('resumen').value = '';
             document.getElementById('contenido_completo').value = '';
             document.getElementById('imagen').value = '';
             document.getElementById('enlace').value = '';
-            previewFrame.contentWindow.postMessage({ type: 'previewUpdate', payload: currentProjects }, '*');
+            updatePreview(true); // Actualizar la preview con el proyecto ya añadido
             alert('Proyecto añadido a la lista. Pulsa "Generar y Descargar" para guardar.');
         }
 
